<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_stnd_background"
    tools:context=".components.activities.authentication.signIn.fragments.frament_sign_in_component"
android:columnCount="1"
    android:rowCount="3">

    <androidx.appcompat.widget.AppCompatImageView android:layout_row="0"
        android:layout_height="100dp">

    </androidx.appcompat.widget.AppCompatImageView>
    <androidx.cardview.widget.CardView
        android:layout_row="1"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="end"
        android:background="@color/white"
        app:cardElevation="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true"
                android:hint="@string/sign_in_with_username_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:endIconMode="password_toggle"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:errorEnabled="true"
                app:errorContentDescription="@string/sign_in_remember_me"
                android:hint="@string/sign_in_with_password_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:text="@string/sign_in_remember_me"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_row="2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_register_new_account_instructions"
            android:textColor="@color/black" />

        <androidx.legacy.widget.Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_for_new_account"
            android:textColor="@color/auth_text_forgot_password_text" />
    </LinearLayout>
</GridLayout>
